Closed Bug 1228484 Opened 10 years ago Closed 10 years ago

"Assertion failure: !Graph() || Graph() == aStream->Graph()"

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox42 --- affected
firefox43 --- affected
firefox44 --- fixed
firefox45 --- fixed
firefox46 --- fixed
firefox-esr38 --- unaffected
b2g-v2.5 --- fixed

People

(Reporter: jruderman, Assigned: karlt)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(3 files)

Attached file testcase
Assertion failure: !Graph() || Graph() == aStream->Graph(), at dom/media/mediasink/DecodedStream.cpp:261
Attached file stack
Assignee: nobody → karlt
Blocks: 1073615
Component: Web Audio → Audio/Video: Playback
Keywords: regression
See Also: → 1228559
I would like to remove support for capturing media elements of one channel to another channel type, but that was explicitly added for bug 1107534, that and the media element channel is mutable. Adding support for capturing to multiple channels may be possible, but we should prevent this delusion of success for now.
bug 1228484 throw instead of capturing a second stream to a different graph r?roc
Attachment #8695482 - Flags: review?(roc)
Aren't we going to break the B2G stuff in bug 1107534?
Flags: needinfo?(karlt)
This only affects b2g if it is capturing a single element into two different graphs, which would already be broken.
Flags: needinfo?(karlt)
Comment on attachment 8695482 [details] MozReview Request: bug 1228484 throw instead of capturing a second stream to a different graph r?roc https://reviewboard.mozilla.org/r/27129/#review24575
Attachment #8695482 - Flags: review?(roc) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
The bug fixed by this patch didn't really exist until bug 1107534 landed. The associated bug from landing bug 1073615, and so affecting esr38, is covered by bug 1223670.
Blocks: 1107534
No longer blocks: 1073615
Comment on attachment 8695482 [details] MozReview Request: bug 1228484 throw instead of capturing a second stream to a different graph r?roc Approval Request Comment [String/UUID change made/needed]: None [Feature/regressing bug #]: bug 1107534 [User impact if declined]: Effects similar to those described in https://bugzilla.mozilla.org/show_bug.cgi?id=1179484#c10 [Describe test coverage new/current, TreeHerder]: New test. [Risks and why]: The biggest risk is if b2g is using the feature in a way that is already broken. If this is the case, an exception will be thrown instead of generating unreliable and crashy audio. [String/UUID change made/needed]: None
Attachment #8695482 - Flags: approval-mozilla-beta?
Attachment #8695482 - Flags: approval-mozilla-aurora?
Comment on attachment 8695482 [details] MozReview Request: bug 1228484 throw instead of capturing a second stream to a different graph r?roc Has been on Nightly for 10 days, seems safe to uplift to Beta44, Aurora45.
Attachment #8695482 - Flags: approval-mozilla-beta?
Attachment #8695482 - Flags: approval-mozilla-beta+
Attachment #8695482 - Flags: approval-mozilla-aurora?
Attachment #8695482 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: