bug 1228484 throw instead of capturing a second stream to a different graph r=roc a=ritu